Парсинг карточки игрока
